[gd_scene load_steps=11 format=2]

[ext_resource path="res://Creatures/Actor/Actor.png" type="Texture" id=1]
[ext_resource path="res://Creatures/Creature/Creature.tscn" type="PackedScene" id=2]
[ext_resource path="res://Creatures/Actor/Actor.gd" type="Script" id=3]
[ext_resource path="res://Creatures/Actor/Stats.gd" type="Script" id=4]
[ext_resource path="res://Creatures/Actor/SelectBox.gd" type="Script" id=5]
[ext_resource path="res://Creatures/Actor/HitBox.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 8 )

[sub_resource type="CircleShape2D" id=3]
radius = 27.074

[sub_resource type="CircleShape2D" id=4]
radius = 4.12311

[node name="Actor" instance=ExtResource( 2 )]
collision_layer = 9
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="SelectBox" parent="." index="2"]
position = Vector2( 0, 0 )
script = ExtResource( 5 )

[node name="SelectBoxShape" parent="SelectBox" index="0"]
position = Vector2( 0, 0 )
shape = SubResource( 2 )

[node name="HitBox" parent="." index="3"]
position = Vector2( 0, 4 )
collision_layer = 16
collision_mask = 4
script = ExtResource( 6 )

[node name="HitBoxShape" parent="HitBox" index="0"]
shape = SubResource( 3 )

[node name="HurtBox" parent="." index="4"]
position = Vector2( 0, 4 )
collision_layer = 2
collision_mask = 0

[node name="HurtBoxShape" parent="HurtBox" index="0"]
shape = SubResource( 4 )

[node name="Stats" parent="." index="5"]
script = ExtResource( 4 )

[connection signal="mouse_exited" from="SelectBox" to="SelectBox" method="_on_SelectBox_mouse_exited"]
[connection signal="timeout" from="HitBox/AttackCooldownTimer" to="HitBox" method="_on_AttackCooldownTimer_timeout"]
[connection signal="zero_health" from="Stats" to="." method="_on_Stats_zero_health"]
[connection signal="timeout" from="UpdatePathToEnemyTimer" to="." method="_on_UpdatePathToEnemyTimer_timeout"]
